src/scss/components/directory-menu/filter-menu/_subcategorie-option-item.scss
/*
* @Author: Sebastian Castro
* @Date:   2017-03-02 08:57:20
* @Last Modified by:   Sebastian Castro
* @Last Modified time: 2017-12-29 17:45:31
*/
.subcategorie-option-item
{
	position: relative;
	margin-bottom: 0;
	line-height: 2.8rem;
	padding: 0;
	padding-left: .9rem;
	height: 2.8rem;
	overflow: hidden;
	text-overflow: ellipsis;

	&:not(.expanded) 
  { 
  	.gogo-icon-name-wrapper 
		{
    	.arrow-after
    	{
    		margin-bottom: -3px;
	    	//border-color: #545454 transparent transparent transparent; 
    	}    	

	    &:hover .arrow-after { margin-bottom: -5px; /*border-color: #de5a5f transparent transparent transparent;*/ }
	  }
  }

	.gogo-icon-name-wrapper 
	{
    margin-right: 3rem;

    &:hover
    {
    	.arrow-after 
			{ 
				border: solid 6px;
	    	margin-bottom: 1px;
	    	//border-color:  transparent transparent #de5a5f transparent; 
	    }
    }
	}

  .arrow-after
	{
		display: inline-block;
    margin-left: 1rem;
    border: solid 5px;
   	margin-bottom: 1px;
    //border-color:  transparent transparent #545454 transparent ;
  }


	.icon
	{
		font-size: 1.4rem;
	}	

	.subcategorie-option-checkbox 
	{
	  + label:before 
	  {
	    width: 13px;
	    height: 13px;
	    left: 2px;
	    top: 3px;
	    z-index: 0;
	    border: 2px solid $radio-empty-color;
	    @include border-radius(50%);
	    margin-top: 2px;
	  }

		&:checked 
		{
		  + label:before 
		  {
		    top: 2px;
			  left: 1px;
		    width: 7px; height: 13px;
		    border-color: $grey-dark;
		    border-top: none;
		    border-left: none;
		    border-right: 2px solid;
		    border-bottom: 2px solid;
		    border-radius: 0;
		    @include transform(rotate(40deg));
		    -webkit-backface-visibility: hidden;
		    @include transform-origin(100% 100%);
		  }
		}

		+ label:hover
		{
			&:before
			{
				//color: $primary-color;
				//border-color:black;
			}
		}
	}

	.checkbox-wrapper
	{
		width: 3rem;
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;

		.checkbox-container
		{
	    position: absolute;
	    top: .6rem;
	    right: 0rem;
		}	
	}

	&:hover
	{
		background-color: $grey-light;
		cursor: pointer;		

    &:not(.option-collapsible)
    {
    	//.subcategorie-option-checkbox + label:before { color: $primary-color; }
    }
	}	

	// &.disabled 
 //  {
 //  	.icon { color: $option-disabled-color; }

 //  	color: #828282;

 //  	.subcategorie-option-checkbox + label:before
 //  	{
 //  		border-color: $option-disabled-color;
 //  	}
 //  	.arrow-after { border-color: #828282 transparent transparent transparent ;}
 //  }

	

}



	

